--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <h4 class="header2">Pick Your Table Now</h4>
     <section id="table_container"> 
         <div class="tables">
-            <input type="button" value="1" class="table_button available">
-            <input type="button" value="2" class="table_button available">
-            <input type="button" value="3" class="table_button reserved">
-            <input type="button" value="4" class="table_button reserved">
-            <input type="button" value="5" class="table_button available">
-            <input type="button" value="6" class="table_button reserved">
-            <input type="button" value="7" class="table_button reserved">
-            <input type="button" value="8" class="table_button available">
-            <input type="button" value="9" class="table_button available">
+            <input type="button" value="1" class="available">
+            <input type="button" value="2" class="available">
+            <input type="button" value="3" class="reserved">
+            <input type="button" value="4" class="reserved">
+            <input type="button" value="5" class="available">
+            <input type="button" value="6" class="reserved">
+            <input type="button" value="7" class="reserved">
+            <input type="button" value="8" class="available">
+            <input type="button" value="9" class="available">
         </div>
     </section>
 <div id="form_container">
