3rd Commit pt. 2

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <input type="button" value="7" class="reserved">
             <input type="button" value="8" class="available">
             <input type="button" value="9" class="available">
+            <div class="slots"> 
+                
+            </div>
         </div>
     </section>
 <div id="form_container">
@@ -36,7 +39,7 @@
         </div>
         <input id="name" placeholder="name">
         <input id="num" placeholder="number">
-        <input id="cust" placeholder="customer"> 
+        <input id="cust" placeholder="party size"> 
         <button type="button" id="save_button">Save</button>
     </form>
 </div>
